--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -62,6 +62,7 @@ credits:
 bundles:
     meta:
         title: "Discover %count% bundles for Symfony2"
+        titleTags: "Found %count% bundles tagged with '%tag%'"
         description: "All Open Source Symfony 2 Bundles sorted by %sort%"
     title: "%count% bundles for Symfony2"
     sort:
@@ -103,6 +104,9 @@ bundles.show:
         iRecommend: "I recommend this bundle"
         iDontRecommend: "I don't recommend this bundle"
         loginToRecommend: "Login to recommend this bundle"
+    tags:
+        title: "Tags"
+        empty: "No tags for this bundle"
     chart:
         title: "Score evolution"
 
