added favs list on user profile.

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -80,6 +80,7 @@ bundles.show:
     setting: "Change bundle settings"
     favourite: "Add to favourites"
     unfavourite: "Remove from favourites"
+    loginToFavourite: "Login to favourite this bundle"
     infos:
         title: "Infos"
         state: "Status:"
