--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -159,7 +159,7 @@ api:
     meta:
         title: "Developer HTTP API"
         description: "Programmatic HTTP API to access Bundles and developers data"
-    title: "Deleveloper API"
+    title: "Developer API"
 
 symfony2bundles:
     meta:
