Add missing translation

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -71,6 +71,7 @@ bundles:
         updated: "Updated recently"
         newest: "New"
         trend: "Trending"
+        recommended: "Most recommended"
 
 bundles.show:
     meta:
