--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -74,7 +74,7 @@ bundles.show:
         travis: "Travis CI"
         github: "Github"
         users: "Nb of users:"
-        symfonyVersion: "Required Symfony version:"
+        symfonyVersion: "Required Symfony version"
         unknown: "unknown"
     score:
         title: "Score details"
