Change some points at info list for bundle, fix #122

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -67,9 +67,10 @@ bundles.show:
         title: "Infos"
         state: "Status:"
         score: "Score:"
-        created: "Created:"
+        updated: "Last update:"
         contributors: "Nb of contributors:"
-        followers: "Nb of followers:"
+        watchers: "Nb of watchers:"
+        recommends: "Nb of recommendations:"
         buildStatus: "Build status:"
         composer: "Composer"
         travis: "Travis CI"
