[WIP] show bundle badge preview box

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -107,6 +107,9 @@ bundles.show:
             not_ready:  "not yet ready"
             ready:      "ready"
             deprecated: "deprecated"
+    badge:
+        title: "Take your Badge"
+        wait_generation: "Hey! Your bundle badge in the queue for the generation of"
 
 bundles.score:
     followers:      "Github watchers:"
