--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -110,6 +110,8 @@ bundles.show:
     badge:
         title: "Take your Badge"
         wait_generation: "Hey! Your bundle badge in the queue for the generation of"
+        click_for_embed: "Hit on badge to grab embed code"
+        embed: "Place this code on your page"
 
 bundles.score:
     followers:      "Github watchers:"
