Fetch information from bundle `composer.json` Allow owners to change it if it was not set in `composer.json` Show license information on bundle lists

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -101,7 +101,7 @@ bundles.show:
         title: "Score evolution"
     settings:
         title:  "Bundle settings"
-        modal:  "Bundle Status Setting"
+        modal:  "Bundle Setting"
         state:
             unknown:    "unknown"
             not_ready:  "not yet ready"
