--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -113,9 +113,10 @@ bundles.show:
         click_for_embed: "Click on badge button to grab code to embed it on your site!"
         embed: "Place this code on your page"
     dependency:
-        requires: Requires
-        requires_dev: Requires (Dev)
-        suggests: Suggests
+        require: Requires
+        require-dev: Requires (Dev)
+        suggest: Suggests
+        none: none
 
 bundles.score:
     followers:      "Github watchers:"
