Add displaying a composer line to relative bundle version Add composer install line for dependencies versions Revert activities tab & update tab icons for dependencies
Reduce font size for bundle main tabs

Add collapse for depndencies tab versions
- add collapse code to the bootstrap js

Add /extra/ field to fetch branch-alias for composer line display

Add /name/ to github repo fetch, for composer line
- extend fixtures to operate with bundle packagist name and alias version for dev-master branch

Add displaying a composer line to relative bundle version

Fix faling update bundle dependencies versions test

Update behat feature context default bundle fixture

Refactor show bundle template to use marco direct w/o import

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -117,6 +117,7 @@ bundles.show:
         require-dev: Requires (Dev)
         suggest: Suggests
         none: none
+        composer: Composer line
 
 bundles.score:
     followers:      "Github watchers:"
